# smart-log-analyzer

./: Readme.md  main.py  pyproject.toml
docs/: Technical requirements.md  project-structure.md
src/smart_log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
