[project]
name = "smart-log-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.13.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "streamlit>=1.53.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]